--- a/local/templates/main/components/bitrix/news.list/happyevent/style.css
+++ b/local/templates/main/components/bitrix/news.list/happyevent/style.css
@@ -100,13 +100,13 @@
     margin-bottom: 10px;
 }
 
-.answer__table {
+.answer__table, table {
     border-collapse: collapse;
     width: 100%;
     margin-bottom: 10px;
 }
 
-.answer__table-item {
+.answer__table-item, tr {
     border: 1px solid #000;
     padding: 10px;
     line-height: 1.5;
