--- a/local/templates/main/components/bitrix/news.list/accommodation_rooms_2/style.css
+++ b/local/templates/main/components/bitrix/news.list/accommodation_rooms_2/style.css
@@ -290,6 +290,7 @@
     -webkit-transition: .3s;
     -o-transition: .3s;
     transition: .3s;
+	cursor: pointer;
 }
 
 .section-numbers .numbers__arrow-prev {
