--- a/local/templates/main/css/app.css
+++ b/local/templates/main/css/app.css
@@ -6617,20 +6617,23 @@ body {
     background: url("../img/bg_nutrition.jpg") no-repeat center;
     background-size: cover;
 }
+
 .nutrition__wrapper-table {
     margin-top: 5%;
     background: url("../img/bg_table.png") no-repeat top left;
-    background-size: cover; 
+    background-size: cover;
 }
+
 .nutrition__wrapper-buffet {
     margin-top: 5%;
     background: url("../img/bg_buffet.jpg") no-repeat center;
-    background-size: cover; 
+    background-size: cover;
 }
+
 .nutrition__wrapper-banquet {
     margin-top: 5%;
     background: url("../img/bg_banquet.jpg") no-repeat center;
-    background-size: cover; 
+    background-size: cover;
 }
 
 
@@ -6649,10 +6652,12 @@ body {
     margin: -2% 0 -2% 10%;
     position: relative;
 }
+
 .nutrition-blue {
     background: #00aced;
 
 }
+
 .nutrition-orange {
     background: rgba(243, 177, 32, 0.85);
 
@@ -6719,10 +6724,12 @@ body {
     .section-nutrition {
         margin-top: 7%;
     }
+
     .nutrition {
         width: 35%;
         margin: -5% 0 -5% 10%;
     }
+
     .nutrition-right {
         margin: -5% 0 -5% 50%;
     }
@@ -6733,11 +6740,12 @@ body {
         width: 45%;
         padding: 35px 25px;
     }
+
     .nutrition-right {
         margin: -5% 0 -5% 30%;
-    }dc VSZXVSDDSvASsSVWABDSA WA
+    }
 
-    .nutrition__text {
+    dc VSZXVSDDSvASsSVWABDSA WA .nutrition__text {
         font-size: .9rem;
         margin-bottom: 30px;
     }
@@ -6753,13 +6761,16 @@ body {
     .section-nutrition {
         margin-top: 0;
     }
+
     .nutrition__wrapper-table {
         margin-top: 100px;
     }
+
     .nutrition {
         width: 80%;
         margin: 5% auto;
     }
+
     .nutrition-right {
         margin: 5% auto;
     }
@@ -7021,13 +7032,925 @@ body {
 }
 
 
-
-
-
 @media (max-width: 575.98px) {
     .message__button {
         font-size: 1rem;
         padding: 10px 40px;
+    }
+}
+
+/*section notes */
+.section-notes {
+    margin-top: 85px;
+}
+
+.article-notes {
+    margin: 5% 0;
+    position: relative;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.article-notes__first {
+    margin: 7% 0;
+}
+
+.notes {
+    position: relative;
+    z-index: 1;
+}
+
+.notes__title {
+    margin-left: 5%;
+    margin-bottom: -5%;
+    font-family: ArialRoundedBold;
+    font-size: 1.4rem;
+    position: relative;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.notes__title::after {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 4px;
+    background: #00aced;
+}
+
+.notes__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+}
+
+.notes__wrapper-left {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+}
+
+.notes__item-img {
+    width: 55%;
+    overflow: hidden;
+    position: relative;
+    height: 0;
+    padding-bottom: 100%;
+    z-index: 1;
+}
+
+.notes__item-img-left {
+    padding-bottom: 70%;
+}
+
+.notes__item-text {
+    width: 40%;
+}
+
+.notes__img {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    -o-object-fit: cover;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.notes__img-left {
+    top: 0;
+    left: 0;
+    min-height: 100%;
+    min-width: 100%;
+    -webkit-transform: translate(0, 0);
+    -ms-transform: translate(0, 0);
+    transform: translate(0, 0);
+}
+
+.note__title {
+    margin-top: 10px;
+    font-family: HelveticaBold;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #000;
+    letter-spacing: unset;
+    font-weight: 400;
+    position: relative;
+}
+
+.note__title::after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 7%;
+    background: #00aced;
+    margin-top: 5px;
+}
+
+.note__text {
+    font-size: 14px;
+    line-height: 1.5;
+    margin-top: 26px;
+}
+
+.note__text-bold {
+    font-weight: bold;
+}
+
+.note__text p {
+    margin-bottom: 10px;
+}
+
+.note__list {
+    list-style-type: disc;
+    margin-left: 15px;
+}
+
+.note__list li {
+    margin-bottom: 10px;
+}
+
+.note__card {
+    width: 140%;
+    margin-top: 15%;
+    padding: 20px;
+    color: #fff;
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    position: relative;
+    z-index: 1;
+}
+
+.note__card::before {
+    content: '';
+    display: block;
+    height: 0;
+    padding-bottom: 20%;
+    width: 25%;
+    background: url("../img/leaf.png") no-repeat center;
+    background-size: contain;
+}
+
+.note__card-right {
+    margin-left: -40%;
+}
+
+.note__card-right::before {
+    margin-right: 5%;
+}
+
+.note__card-left {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+}
+
+.note__card-left::before {
+    width: 25%;
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+
+.note__card-angle {
+    border-radius: 0;
+}
+
+.note__card-orange {
+    background: rgba(243, 177, 32, 0.85);
+}
+
+.note__card-green {
+    background: rgba(137, 196, 62, 0.85);
+}
+
+.note__card-pink {
+    background: rgba(235, 79, 154, 0.85);
+}
+
+.note__card-text {
+    width: 70%;
+    line-height: 1.5;
+    font-size: 14px;
+}
+
+.lines-three::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("../img/line.png") no-repeat 0% 10%, url("../img/line.png") no-repeat -3% 0%;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background-size: 11%;
+    z-index: -1;
+}
+
+.lines-three::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: url("../img/line.png") no-repeat -10% 15%;
+    background-size: 11%;
+    z-index: -1;
+}
+
+.lines-two::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url("../img/line.png") no-repeat -9% 1%;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background-size: 11%;
+}
+
+.lines-two::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background: url("../img/line.png") no-repeat -10% 15%;
+    background-size: 11%;
+}
+
+.lines-one::before {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url("../img/line.png") no-repeat -9% 1%;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+    background-size: 11%;
+}
+
+@media (max-width: 991.98px) {
+    .note__title {
+        font-size: 0.9rem;
+        line-height: 1.2;
+    }
+
+    .note__text {
+        font-size: 12px;
+        margin-top: 15px;
+    }
+
+    .note__list li {
+        margin-bottom: 5px;
+    }
+
+    .note__card {
+        margin-top: 10%;
+    }
+
+    .note__card-text {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .notes__item-img {
+        min-height: 100%;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .article-notes {
+        margin: 10% 0;
+    }
+
+    .notes__title {
+        display: none;
+    }
+
+    .notes__wrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+    }
+
+    .notes__item {
+        width: 95%;
+    }
+
+    .notes__item-img {
+        min-height: 0;
+        margin-bottom: 5%;
+        padding-bottom: 70%;
+    }
+
+    .notes__item-text {
+        margin-left: 0;
+    }
+
+    .notes__img {
+        width: 100%;
+        top: 0;
+        left: 0;
+        -webkit-transform: translate(0%, 0%);
+        -ms-transform: translate(0%, 0%);
+        transform: translate(0%, 0%);
+    }
+
+    .note {
+        border-radius: 25px;
+        color: #fff;
+        padding: 30px 20px;
+    }
+
+    .note-green {
+        background: rgba(137, 196, 62, 0.85);
+    }
+
+    .note-orange {
+        background: rgba(243, 177, 32, 0.85);
+    }
+
+    .note__title {
+        color: #fff;
+        font-size: 25px;
+    }
+
+    .note__title::after {
+        content: '';
+        background: #fff;
+        width: 15%;
+        height: 5px;
+    }
+
+    .note__text {
+        font-size: 15px;
+    }
+
+    .note__card {
+        background: transparent;
+        width: 100%;
+        padding: 0;
+        padding: 15px;
+    }
+
+    .note__card::before {
+        content: '';
+        display: none;
+    }
+
+    .note__card-right {
+        margin-left: 0;
+    }
+
+    .note__card-text {
+        width: 100%;
+        font-size: 12px;
+        line-height: 1.2;
+    }
+
+    .lines-three::before,
+    .lines-two::before,
+    .lines-one::before {
+        display: none;
+    }
+
+    .lines-three::after,
+    .lines-two::after,
+    .lines-one::after {
+        display: none;
+    }
+}
+
+@media (max-width: 400px) {
+    .notes__item {
+        width: 98%;
+    }
+
+    .notes__item-img {
+        padding-bottom: 90%;
+    }
+
+    .note__title {
+        font-size: 18px;
+    }
+
+    .note__text {
+        font-size: 12px;
+    }
+}
+
+
+/*section banquet */
+.banquet {
+    width: 100%;
+}
+
+.banquet__wrapper {
+    width: 100%;
+    padding: 30px 0;
+    color: #fff;
+    background: #8ac43f;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+}
+
+.banquet__title {
+    font-family: HelveticaBold;
+    font-size: 16px;
+    line-height: 1.5;
+}
+
+.banquet__title::after {
+    content: '';
+    display: block;
+    width: 30%;
+    height: 3px;
+    background: #fff;
+}
+
+.banquet__text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 20%;
+}
+
+.banquet__icon {
+    width: 60px;
+    height: 60px;
+    margin-right: 20px;
+    background: url(../img/icon_banquet.png) no-repeat center;
+    background-size: cover;
+}
+
+.banquet__link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 14px;
+    text-decoration: underline;
+}
+
+.banquet__description {
+    font-size: 14px;
+    line-height: 1.2;
+    margin: 30px auto;
+}
+
+@media (max-width: 991.98px) {
+    .banquet__text {
+        width: 30%;
+    }
+
+    .banquet__description {
+        margin-bottom: 10px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .banquet__wrapper {
+        padding-left: 40px;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: start;
+        -ms-flex-pack: start;
+        justify-content: flex-start;
+    }
+
+    .banquet__title {
+        margin-bottom: 30px;
+        font-size: 22px;
+    }
+
+    .banquet__title::after {
+        height: 5px;
+    }
+
+    .banquet__text {
+        width: 100%;
+    }
+
+    .banquet__icon {
+        width: 70px;
+        height: 70px;
+        margin-left: -1%;
+    }
+
+    .banquet__link {
+        font-size: 20px;
+    }
+
+    .banquet__description {
+        margin-bottom: 0;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 400px) {
+    .banquet__title {
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+
+    .banquet__title::after {
+        height: 3px;
+    }
+
+    .banquet__icon {
+        width: 50px;
+        height: 50px;
+    }
+
+    .banquet__link {
+        font-size: 16px;
+    }
+}
+
+/*section place */
+.section-place {
+    margin-top: 100px;
+}
+
+.place__title {
+    font-size: 16px;
+    font-family: HelveticaBold;
+    line-height: 1.5;
+    margin-left: 5%;
+}
+
+.place__title::after {
+    content: '';
+    display: block;
+    width: 20%;
+    height: 3px;
+    background: #00aced;
+}
+
+.place__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    margin-top: 50px;
+    position: relative;
+}
+
+.place__item {
+    width: calc(100% / 2 - 100px -2%);
+}
+
+.place__item:first-child {
+    margin-left: 50px;
+    margin-right: 2%;
+}
+
+.place__item:last-child {
+    -webkit-transform: translate(0, -80px);
+    -ms-transform: translate(0, -80px);
+    transform: translate(0, -80px);
+    margin-right: 50px;
+}
+
+.place__img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.place__img-wrapper {
+    width: 100%;
+    min-height: 400px;
+    position: relative;
+    overflow: hidden;
+}
+
+.place__card {
+    color: #fff;
+    padding: 20px;
+    border-radius: 25px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    position: relative;
+}
+
+.place__card::before {
+    content: '';
+    display: block;
+    width: 25%;
+    height: 0;
+    padding-bottom: 20%;
+    background: url(../img/leaf.png) no-repeat center;
+    background-size: contain;
+}
+
+.place__card-blue {
+    background: rgba(0, 172, 236, 0.85);
+    top: -25%;
+    left: -50px;
+}
+
+.place__card-blue::before {
+    -webkit-transform: rotate(-90deg);
+    -ms-transform: rotate(-90deg);
+    transform: rotate(-90deg);
+}
+
+.place__card-pink {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: row-reverse;
+    flex-direction: row-reverse;
+    background: rgba(235, 79, 154, 0.85);
+    top: -50%;
+    right: -50px;
+}
+
+.place__card-pink .place__card-text {
+    margin-right: 50px;
+}
+
+.place__card-text {
+    font-size: 14px;
+    margin-left: 50px;
+}
+
+.place__text {
+    margin-top: -100px;
+    line-height: 1.5;
+    font-size: 14px;
+    width: 80%;
+    margin-left: 20%;
+}
+
+.place__text p {
+    margin-bottom: 10px;
+}
+
+@media (max-width: 1199.98px) {
+    .place__img-wrapper {
+        min-height: 350px;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .place__item:first-child {
+        margin-left: 30px;
+    }
+
+    .place__item:last-child {
+        margin-right: 30px;
+    }
+
+    .place__img-wrapper {
+        min-height: 300px;
+    }
+
+    .place__card-blue {
+        left: -30px;
+        top: -17%;
+    }
+
+    .place__card-pink {
+        right: -30px;
+        top: -40%;
+    }
+
+    .place__text {
+        margin-top: -70px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .place__item:first-child {
+        margin-left: 15px;
+    }
+
+    .place__item:last-child {
+        margin-right: 15px;
+    }
+
+    .place__img-wrapper {
+        min-height: 250px;
+    }
+
+    .place__card {
+        padding: 15px;
+    }
+
+    .place__card::before {
+        padding-bottom: 25%;
+    }
+
+    .place__card-blue {
+        left: -15px;
+        top: -17%;
+    }
+
+    .place__card-pink {
+        right: -15px;
+        top: -35%;
+    }
+
+    .place__card-text {
+        margin-left: 30px;
+        font-size: 12px;
+    }
+
+    .place__text {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .section-place {
+        margin-top: 60px;
+    }
+
+    .place__wrapper {
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+    }
+
+    .place__title {
+        font-size: 25px;
+    }
+
+    .place__title::after {
+        height: 5px;
+    }
+
+    .place__item {
+        width: 90%;
+    }
+
+    .place__item:first-child {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .place__item:last-child {
+        -webkit-transform: translate(0, 0);
+        -ms-transform: translate(0, 0);
+        transform: translate(0, 0);
+        margin-right: 0;
+    }
+
+    .place__img-wrapper {
+        min-height: 330px;
+    }
+
+    .place__card {
+        top: -20%;
+        width: 90%;
+    }
+
+    .place__card::before {
+        padding-bottom: 20%;
+    }
+
+    .place__card-blue {
+        left: 5%;
+    }
+
+    .place__card-text {
+        font-size: 16px;
+    }
+
+    .place__text {
+        width: 90%;
+        margin-left: 5%;
+        font-size: 18px;
+        margin-top: -60px;
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 575.98px) and (max-width: 400px) {
+    .place__wrapper {
+        margin-top: 30px;
+    }
+
+    .place__title {
+        font-size: 18px;
+    }
+
+    .place__title::after {
+        height: 3px;
+    }
+
+    .place__item {
+        width: 95%;
+    }
+
+    .place__img-wrapper {
+        min-height: 250px;
+    }
+
+    .place__card {
+        top: -15%;
+        width: 90%;
+    }
+
+    .place__card-text {
+        font-size: 14px;
+    }
+
+    .place__text {
+        width: 94%;
+        margin-left: 3%;
+        font-size: 14px;
+        margin-top: -50px;
     }
 }
 
